enable the tray class
I have enable the tray icon for zettlr. Currently it is just an icon, it can not allow the program running at back

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ eslint_report.htm
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 .history
+.idea/inspectionProfiles/Project_Default.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/Zettlr.iml
