Run setup-github-hosted-runner.sh for Linux build
Run the scripts/setup-github-hosted-runner.sh for the Linux build to
prepare the libappindicator3-1.so library across multiple architectures.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -180,6 +180,9 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
+      - name: Set up GitHub hosted runner
+        run: sudo bash ../scripts/setup-github-hosted-runner.sh
+        working-directory: ./resources
       - name: Setup NodeJS 14.17
         uses: actions/setup-node@v1
         with:
